fixed spacing issues with containers on a listing page

--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -4,7 +4,6 @@
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 4%;
-  width: 90%;
 }
 
 /* ------           heading           -------- */
@@ -15,40 +14,32 @@
   font-weight: bold;
 }
 
-
-.details-header-container{
-  display: flex; 
+.details-header-container {
+  display: flex;
   margin-bottom: 20px;
   gap: 10px;
 }
 
-#details-heading-star{
-font-size: 12px;
+#details-heading-star {
+  font-size: 12px;
 }
 
-
-.details-header-new{
+.details-header-new {
   font-size: 14px;
-  
 }
-.details-header-reviews{
+.details-header-reviews {
   font-size: 14px;
-  
 }
 
-.details-num-reviews{
-  
+.details-num-reviews {
   text-decoration: underline;
-
 }
-
 
 .spot-location {
   font-size: 15px;
 
   /* opacity: 0.8; */
 }
-
 
 /* -------         Images          -------- */
 
@@ -59,7 +50,7 @@ font-size: 12px;
 }
 
 .detail-preview-container {
-  width: 45%;
+  width: 50%;
   height: 100%;
 }
 
@@ -82,77 +73,59 @@ font-size: 12px;
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
-  width: 45%;
+  width: 48%;
   height: 205px;
   object-fit: cover;
 }
 .detail-image-two {
-  margin-right: 5px;
   margin-bottom: 10px;
-  width: 45%;
+  width: 48%;
   height: 205px;
   object-fit: cover;
   border-top-right-radius: 12px;
 }
 .detail-image-three {
   margin-left: 10px;
-  margin-right: 5px;
-  width: 45%;
+  width: 48%;
   height: 205px;
 
   object-fit: cover;
 }
 .detail-image-four {
-  margin-left: 5px;
-  margin-right: 5px;
-  width: 45%;
+  margin-left: 10px;
+  width: 48%;
   height: 205px;
   object-fit: cover;
   border-bottom-right-radius: 12px;
 }
 
-/* --------       description       -------- */
+/* -----------         under image title      ------------ */
+
+.detail-title-reserve-container {
+  display: flex;
+  width: 100%;
+  margin-top: 20px;
+  justify-content: space-between;
+}
 
 .owner-title {
   width: 50%;
   padding-bottom: 20px;
-  border-bottom: 1.5px solid rgb(227, 227, 227) ;
-  margin-top: 20px;
+  border-bottom: 1.5px solid rgb(227, 227, 227);
   margin-bottom: 20px;
   font-size: 20px;
-  position: relative;
-  bottom: 5px;
   opacity: 0.8;
 }
 
-
-
-.detail-description-review-container{}
-
-
-
-.description {
-  font-size: 15px;
-  width: 50%;
-  position: relative;
-  bottom: 25px;
-}
-
-
-
-/* --------------              RESERVE           ---------------------- */
+/* --------------              Booking container          ---------------------- */
 .reserve-container {
   background-color: rgb(255, 254, 254);
   width: 28%;
   height: 90px;
-  position: relative;
-  bottom: 160px;
-  left: 62%;
   border: 1.5px solid rgb(227, 227, 227);
 
   border-radius: 10px;
   padding: 10px;
-
 }
 
 .price-star-container {
@@ -221,12 +194,29 @@ font-size: 12px;
 
 } */
 
+/* --------       description       -------- */
+.details-description-container {
+  width: 50%;
+}
+
+.description-title {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.description {
+  font-size: 15px;
+}
+
 /* ------------------------  REVIEWS  ------------------------------------ */
 
+.detail-review-container {
+  width: 100%;
+  border: 1.5px solid rgb(227, 227, 227);
+  margin-top: 20px;
+}
+
 .reviews-container {
-  position: relative;
-  bottom: 100px;
-  border-top: 3px solid black;
   display: flex;
   flex-direction: column;
 }
@@ -246,12 +236,10 @@ font-size: 12px;
 
 /* ------------------------  EACH REVIEW  ------------------------------------ */
 .each-review-container {
-  display: flex;
+  /* display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  align-content: flex-start;
-  position: relative;
-  margin-bottom: 15px;
+  align-content: flex-start; */
 }
 
 .first-last-review {
@@ -261,12 +249,8 @@ font-size: 12px;
 .review-date {
   font-size: 12px;
   opacity: 0.4;
-  position: relative;
-  bottom: 8px;
 }
 
 .review-text {
   font-size: 14px;
-  position: relative;
-  bottom: 12px;
 }
